src/test/ui/asm/asm-src-loc.rs
// ignore-emscripten

#![feature(asm)]

fn main() {
    unsafe {
        asm!("nowayisthisavalidinstruction"); //~ ERROR instruction
    }
}
